objects/PainAndNeedField__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>CallReportCISFieldId__c</fullName>
        <label>CallReportCISFieldId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallReportFieldId__c</fullName>
        <label>CallReportFieldId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PainAndNeedObjectId__c</fullName>
        <label>PainAndNeedObjectId</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PainAndNeedField</label>
</CustomObject>